system/cms/themes/pyrocms/css/workless.css
/* ... */
.topbar ul li ul li a {
  display: block;
  padding: 6px 15px;
  clear: both;
  font-weight: normal;
  line-height: 19px;
  color: #bbbbbb;
}

.topbar ul li ul li a:hover {
  background-color: #333;
  background-color: rgba(255, 255, 255, 0.25);
  color: #fff;
}

/*
-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------

Pretty Print Styles. (Code prettifier...)

-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------
*/

.com { color: #93a1a1; }
.lit { color: #195f91; }
.pun, .opn, .clo { color: #93a1a1; }
.fun { color: #dc322f; }
.str, .atv { color: #268bd2; }
.kwd, .tag { color: #195f91; }
.typ, .atn, .dec, .var { color: #CB4B16; }
.pln { color: #93a1a1; }

pre.prettyprint {
	background: #111111;
  	padding: 15px;
  	border: 1px solid rgba(0,0,0,.2);
  	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
  	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
  	box-shadow: 0 1px 2px rgba(0,0,0,.1);
}

.prettyprint ul, .prettyprint ol {
	margin: 0;
	padding: 0 10px 0 10px;
}

/* Specify class=linenums on a pre to get line numbering */
ol.linenums li { color: #111111; line-height: 20px; }

/* Alternate shading for lines */
li.L1, li.L3, li.L5, li.L7, li.L9 { background: #222222; }

/*
-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------

You can declare your primary styles in the following section, but, if your application becomes CSS 
'heavy' then I'd suggest moving your primary styles to a seperate stylesheet and including that in the
HEAD.

Why? Internet Explorer.

Internet Explorer stops reading CSS selectors after 4095, effectively ignoring the rest of your CSS 
declarations!

-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------
*/

/*
-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------

Primary styles. (Mobile first, everything else is overridden with @media queries near the bottom)

@Version:
@Author:

-------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------
*/

#container {
	width: 280px;
	height: 100%;
	min-height: 100%;
	margin: 0 auto;
	padding: 0;
}

.one_full { 
	width: 250px; 
	margin: 0; 
	float: left; 
}

.one_half { 
	width: 250px; 
	float: left; 
}

.one_third { 
	width: 250px; 
	float: left; 
}

.two_third { 
	width: 250px; 
	float: left; 
}

.one_quarter { 
	width: 250px; 
	float: left; 
}

.three_quarter {
	width: 250px;
	float: left;
}

.topbar {
	height: 200px;
}

.topbar ul li#dashboard-link {
	margin: 8px 10px 8px 15px;
}

.topbar ul li#dashboard-link a {
	padding: 6px 12px;
	color: #ffffff;
	float: left;
}

#logo {
	font-size: 16px;
	color: #ffffff;
	margin: 0 12px 0 3px;
	padding: 15px 15px 15px 0;
	border-right: 1px solid #383838;
	float: left;
}

#logo a {
	font-size: 16px;
	color: #ffffff;
}

.subbar {
	position: fixed;
	z-index: 9997;
	top: 25px!important;
	right: 0;
	left: 0;
	width: 100%;
	height: 30px;
	background: #f7f7f7;
  	background-repeat: repeat-x;
  	background-image: -khtml-gradient(linear, left top, left bottom, from(#f7f7f7), to(#f3f3f3));
  	background-image: -moz-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -ms-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f7f7f7), color-stop(100%, #f3f3f3));
  	background-image: -webkit-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: -o-linear-gradient(#f7f7f7, #f3f3f3);
  	background-image: linear-gradient(#f7f7f7, #f3f3f3);
  	border: 1px solid #ffffff;
  	border-bottom: 1px solid #eeeeee;
  	padding: 15px 15px 13px 0;
  	margin-top: 15px;
  	border-top-right-radius: 5px;
  	-moz-border-radius-topright: 5px; 	
  	-webkit-border-top-right-radius: 5px;
  	border-top-left-radius: 5px;
  	-moz-border-radius-topleft: 5px; 	
  	-webkit-border-top-left-radius: 5px;
  	box-shadow: 0px 0px 1px #aaaaaa;
  	-moz-box-shadow: 0px 0px 1px #aaaaaa;
  	-webkit-box-shadow: 0px 0px 1px #aaaaaa;
}

#content-body {
	top: 135px;
	position: relative;
}

.subbar h2, .subbar h2 a {
  	color: #555555;
  	text-shadow: 1px 1px 0 #ffffff;
	margin: 0;
	padding: 0 0 0 5px;
	float: left;
	font-size: 20px;
}

.subbar small {
	color: #888888;
	margin: 12px 0 0 0;
	float: left;
	text-shadow: 0 1px 1px #ffffff;
	font-size: 13px;
	display: none;
}

#shortcuts {
	margin: 3px 30px 0 0;
	float: right;
}

#shortcuts h6 {
	display: none;
}

#shortcuts ul {
}

#shortcuts ul li {
	margin: 8px 0 0 10px;
	float: left;
}

#shortcuts ul li a.add {
	margin-top: -4px;
	float: left;
	padding: 0 10px 2px 7px!important;
}

#shortcuts ul li a.add:before {
  content: '+ ';
  color: #333333;
  font-size: 16px;
  font-weight: bold;
  text-shadow: 0 1px 0 #ffffff;
  vertical-align: 0;
}
/* ... */

